--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>06-surf-and-paddle</title>
+  <title>Kae</title>
   <link rel="stylesheet" href="/app.css">
 </head>
 <body>
