--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,50 @@
   <link rel="stylesheet" href="/app.css">
 </head>
 <body>
+  <header>
+
+    <div class="navbar">
+      <div class="left-nav">
+        <div class="logo"><img src="https://danielgriswold.files.wordpress.com/2010/05/surf-logo-prime-small.jpg"></div>
+        <div class="name">Surf and Paddle Co. Blog</div>
+      </div>
+      <div class="right-nav">
+        <ul>
+          <li><a href="#" class="list-item">About</a></li>
+          <li><a href="#" class="list-item">Search</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="title">
+      <div class="top-title">Surf and Paddle Co.</div>
+      <div class="bottom-title">An Ironyard Academy Project Est Fall 2013</div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+  </header>
+
+
+
+
+
+
+
+
+
+
+
+
   <script src="/app.js" charset="utf-8"></script>
 </body>
 </html>
