--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,11 @@
   <link rel="stylesheet" href="/app.css">
 </head>
 <body>
-  <header>
-
+  <header class="hero hero-pic">
+      <!--<img src="https://www.surfingindia.net/files/surf-files/u9/India_Surf_Tours_-_17__1_.jpg" class="background">-->
     <div class="navbar">
       <div class="left-nav">
-        <div class="logo"><img src="https://danielgriswold.files.wordpress.com/2010/05/surf-logo-prime-small.jpg"></div>
-        <div class="name">Surf and Paddle Co. Blog</div>
+        <div class="logo"><img src="/images/surf-logo-prime-small.jpg" class="logo-pic">        <span class="name">Surf and Paddle Co. Blog</span></div>
       </div>
       <div class="right-nav">
         <ul>
@@ -26,18 +25,7 @@
       <div class="bottom-title">An Ironyard Academy Project Est Fall 2013</div>
     </div>
 
-
-
-
-
-
-
-
-
-
-
-
-  </header>
+</header>
 
 
 
