--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
   <header class="hero hero-pic">
       <!--<img src="https://www.surfingindia.net/files/surf-files/u9/India_Surf_Tours_-_17__1_.jpg" class="background">-->
     <div class="navbar">
-      <div class="left-nav">
-        <div class="logo"><img src="/images/surf-logo-prime-small.jpg" class="logo-pic">        <span class="name">Surf and Paddle Co. Blog</span></div>
+      <div class="nav__left">
+        <div class="logo"><img src="/images/surf-logo-prime-small.jpg" class="logo-pic"><span class="name">Surf and Paddle Co. Blog</span></div>
       </div>
-      <div class="right-nav">
-        <ul>
+      <div class="nav__right">
+        <ul class="navbar__list">
           <li><a href="#" class="list-item">About</a></li>
           <li><a href="#" class="list-item">Search</a></li>
         </ul>
@@ -21,8 +21,8 @@
     </div>
 
     <div class="title">
-      <div class="top-title">Surf and Paddle Co.</div>
-      <div class="bottom-title">An Ironyard Academy Project Est Fall 2013</div>
+      <div class="title__top">Surf and Paddle Co.</div>
+      <div class="title__bottom">An Ironyard Academy Project Est Fall 2013</div>
     </div>
 
 </header>
