started middle section

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,35 @@
       <div class="title__bottom">An Ironyard Academy Project Est Fall 2013</div>
     </div>
 
-</header>
+</header> <!--end of header-->
+
+<div class="container">
+<div class="section">
+<div class="grid">
+  <div class="grid__left">
+    <div class="headline">
+      <div class="headline__title">Fanstastic Headline Goes Here</div>
+      <div class="headline__byline">
+        <span class="headline__pic"><img src="#" class=""></span>
+        <span class="headline__name">Anne Marie</span>
+        <span class="headline__on">on</span>
+        <span class="headline__date">Monday Oct 7th 9:22pm</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="grid__right"></div>
+</div>
+
+
+
+</div>
+
+
+
+
+
+</div>
 
 
 
