styling middle section

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
 <div class="container">
 <div class="section">
 <div class="grid">
+
   <div class="grid__left">
     <div class="headline">
       <div class="headline__title">Fanstastic Headline Goes Here</div>
@@ -39,10 +40,19 @@
         <span class="headline__on">on</span>
         <span class="headline__date">Monday Oct 7th 9:22pm</span>
       </div>
+      <div class="lorem">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis at, error totam sunt quas. Vitae ad, aperiam, eum amet rerum alias culpa aspernatur similique, nisi, nulla id corrupti quibusdam doloremque?</p>
+      </div>
     </div>
   </div>
 
-  <div class="grid__right"></div>
+  <div class="grid__right">
+   <div class="social"><img src="#" class="social__pic"></div>
+   <div class="lorem">
+     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam saepe, voluptas iure aliquid dolores necessitatibus rerum aut consequatur voluptates qui laudantium dicta eaque distinctio id tempore consectetur quas magni.</p>
+   </div>
+
+  </div>
 </div>
 
 
