--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 
   <div class="grid__left">
     <div class="headline">
-      <div class="headline__title">Fanstastic Headline Goes Here</div>
+      <div class="headline__title">A Fanstastic, Engaging Headline Goes Here</div>
       <div class="headline__byline">
         <span class="headline__pic"><img src="#" class=""></span>
         <span class="headline__name">Anne Marie</span>
@@ -42,7 +42,18 @@
       </div>
       <div class="lorem">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis at, error totam sunt quas. Vitae ad, aperiam, eum amet rerum alias culpa aspernatur similique, nisi, nulla id corrupti quibusdam doloremque?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis at, error totam sunt quas. Vitae ad, aperiam, eum amet rerum alias culpa aspernatur similique, nisi, nulla id corrupti quibusdam doloremque?</p>
+         <div class="lorem__indent">
+          <div class="lorem__pipe">|<span class="lorem__quote">Woah, that's radical!</span></div>
+         </div>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis at, error totam sunt quas. Vitae ad, aperiam, eum amet rerum alias culpa aspernatur similique, nisi, nulla id corrupti quibusdam doloremque?</p>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis at, error totam sunt quas. Vitae ad, aperiam, eum amet rerum alias culpa aspernatur similique, nisi, nulla id corrupti quibusdam doloremque?</p>
       </div>
+        <div class="lorem__links">
+          <span class="lorem__links--comments"><img src="#" alt="" class="">Read Comments</span>
+          <span class="lorem__links--later"><img src="#" alt="" class="">Read Later</span>
+          <span class="lorem__links--share"><img src="#" alt="" class="">Share This Post</span>
+        </div>
     </div>
   </div>
 
