worked on right side

--- a/public/index.html
+++ b/public/index.html
@@ -58,10 +58,31 @@
   </div>
 
   <div class="grid__right">
-   <div class="social"><img src="#" class="social__pic"></div>
-   <div class="lorem">
+   <div class="social">
+     <img src="#" class="social__pic">
+      <div class="social__name">Anne Marie</div>
+        <div class="social__links">
+          <span class="link">Twitter</span>
+          <span class="link">Facebook</span>
+          <span class="link"> Instagram</span>
+        </div>
+   </div>
+
+   <div class="ad">
+     <img src="#" alt="" class="ad__picture">
+     <div class="ad__link">About This Ad</div>
+   </div>
+
+
+
+<div class="sidebar">
+  <div class="sidebar__heading">Sidebar Section Heading</div>
+   <div class="sidebar__lorem">
      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam saepe, voluptas iure aliquid dolores necessitatibus rerum aut consequatur voluptates qui laudantium dicta eaque distinctio id tempore consectetur quas magni.</p>
    </div>
+    </div>
+
+
 
   </div>
 </div>
