--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>06-surf-and-paddle</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/app.css">
 </head>
+
 <body>
   <header class="hero hero-pic">
-      <!--<img src="https://www.surfingindia.net/files/surf-files/u9/India_Surf_Tours_-_17__1_.jpg" class="background">-->
+    <!--<img src="https://www.surfingindia.net/files/surf-files/u9/India_Surf_Tours_-_17__1_.jpg" class="background">-->
     <div class="navbar">
       <div class="nav__left">
         <div class="logo"><img src="/images/surf-logo-prime-small.jpg" class="logo-pic"><span class="name">Surf and Paddle Co. Blog</span></div>
@@ -26,69 +28,99 @@
       <div class="title__bottom">An Ironyard Academy Project Est Fall 2013</div>
     </div>
 
-</header> <!--end of header-->
+  </header>
+  <!--end of header-->
 
-<div class="container">
-<div class="section">
-<div class="grid">
+  <div class="container">
+    <div class="section">
+      <div class="grid">
 
-  <div class="grid__left">
-    <div class="headline">
-      <div class="headline__title">A Fanstastic, Engaging Headline Goes Here</div>
-      <div class="headline__byline">
-        <span class="headline__pic"><img src="/images/surfpic.jpeg" class="headline__pic"></span>
-        <span class="headline__name">Anne Marie</span>
-        <span class="headline__on">on</span>
-        <span class="headline__date">Monday Oct 7th 9:22pm</span>
-      </div>
-      <div class="lorem">
-        <p>Lomo schlitz poutine church-key fap, butcher hoodie art party PBR&B bitters pickled you probably haven't heard of them everyday carry. Hammock blog biodiesel, seitan godard shoreditch tattooed. Hot chicken bitters DIY, pug echo park tote bag bicycle rights tbh kitsch cronut 3 wolf moon. Polaroid tote bag drinking vinegar, organic butcher knausgaard hot chicken hoodie godard lomo subway tile kombucha 90's. Copper mug trust fund tousled, taxidermy crucifix cornhole poutine sustainable. Ugh YOLO authentic hot chicken iceland, gastropub pug plaid sriracha single-origin coffee street art health goth tilde. Church-key man braid banh mi tote bag, post-ironic cardigan neutra.</p>
-        <p>Prism pork belly ramps subway tile brooklyn. Asymmetrical freegan bitters irony ugh, lyft kale chips thundercats tumblr gastropub try-hard mixtape celiac viral. Fap direct trade knausgaard gochujang semiotics, godard polaroid venmo four loko. Chicharrones swag synth street art. Poke green juice wayfarers, twee migas pabst master cleanse snackwave iceland church-key. Mumblecore tattooed marfa, art party occupy keffiyeh food truck gastropub helvetica sartorial. Direct trade pop-up craft beer you probably haven't heard of them.</p>
-         <div class="lorem__indent">
-          <div class="lorem__pipe"><span class="lorem__quote">Woah, that's radical!</span></div>
-         </div>
-         <p>Try-hard hoodie fam cardigan coloring book, sartorial franzen schlitz migas yr readymade drinking vinegar. Lumbersexual woke godard, succulents four loko farm-to-table mlkshk butcher knausgaard tofu. Before they sold out typewriter helvetica, glossier organic etsy aesthetic pug locavore gentrify plaid la croix fashion axe brooklyn. Authentic gluten-free distillery art party pour-over jean shorts. Kale chips pop-up meggings shoreditch before they sold out. Gentrify 8-bit retro bitters cred, fashion axe paleo sartorial pok pok air plant actually banjo. Banh mi whatever man bun, tattooed flannel fam banjo aesthetic quinoa migas hexagon.</p>
-         <p>Etsy vaporware bushwick shoreditch. Humblebrag tousled taxidermy pinterest, gochujang fanny pack asymmetrical try-hard enamel pin tumblr. Gentrify skateboard chartreuse, try-hard YOLO readymade snackwave poke succulents disrupt blog art party. Iceland readymade XOXO lo-fi. Drinking vinegar tote bag hammock, YOLO truffaut DIY freegan blog deep v post-ironic. Ugh letterpress etsy, hexagon skateboard post-ironic venmo marfa bitters. Before they sold out cornhole health goth leggings vexillologist tbh etsy, retro fixie chia sriracha asymmetrical.</p>
-      </div>
-        <div class="lorem__links">
-          <span class="lorem__links--comments"><span class="fa fa-fw fa-comment-o fa-2x"></span>Read Comments</span>
-          <span class="lorem__links--later"><span class="fa fa-fw fa-cloud-download fa-2x"></span>Read Later</span>
-          <span class="lorem__links--share"><span class="fa fa-fw fa-share-square fa-2x"></span>Share This Post</span>
+        <div class="grid__left">
+          <div class="headline">
+            <div class="headline__title">A Fanstastic, Engaging Headline Goes Here</div>
+            <div class="headline__byline">
+              <span class="headline__pic"><img src="/images/surfpic.jpeg" class="headline__pic"></span>
+              <span class="headline__name">Anne Marie</span>
+              <span class="headline__on">on</span>
+              <span class="headline__date">Monday Oct 7th 9:22pm</span>
+            </div>
+            <div class="lorem">
+              <p>Lomo schlitz poutine church-key fap, butcher hoodie art party PBR&B bitters pickled you probably haven't heard of them everyday carry. Hammock blog biodiesel, seitan godard shoreditch tattooed. Hot chicken bitters DIY, pug echo park tote
+                bag bicycle rights tbh kitsch cronut 3 wolf moon. Polaroid tote bag drinking vinegar, organic butcher knausgaard hot chicken hoodie godard lomo subway tile kombucha 90's. Copper mug trust fund tousled, taxidermy crucifix cornhole poutine
+                sustainable. Ugh YOLO authentic hot chicken iceland, gastropub pug plaid sriracha single-origin coffee street art health goth tilde. Church-key man braid banh mi tote bag, post-ironic cardigan neutra.</p>
+              <p>Prism pork belly ramps subway tile brooklyn. Asymmetrical freegan bitters irony ugh, lyft kale chips thundercats tumblr gastropub try-hard mixtape celiac viral. Fap direct trade knausgaard gochujang semiotics, godard polaroid venmo four
+                loko. Chicharrones swag synth street art. Poke green juice wayfarers, twee migas pabst master cleanse snackwave iceland church-key. Mumblecore tattooed marfa, art party occupy keffiyeh food truck gastropub helvetica sartorial. Direct trade
+                pop-up craft beer you probably haven't heard of them.</p>
+              <div class="lorem__indent">
+                <div class="lorem__pipe"><span class="lorem__quote">Woah, that's radical!</span></div>
+              </div>
+              <p>Try-hard hoodie fam cardigan coloring book, sartorial franzen schlitz migas yr readymade drinking vinegar. Lumbersexual woke godard, succulents four loko farm-to-table mlkshk butcher knausgaard tofu. Before they sold out typewriter helvetica,
+                glossier organic etsy aesthetic pug locavore gentrify plaid la croix fashion axe brooklyn. Authentic gluten-free distillery art party pour-over jean shorts. Kale chips pop-up meggings shoreditch before they sold out. Gentrify 8-bit retro
+                bitters cred, fashion axe paleo sartorial pok pok air plant actually banjo. Banh mi whatever man bun, tattooed flannel fam banjo aesthetic quinoa migas hexagon.</p>
+              <p>Etsy vaporware bushwick shoreditch. Humblebrag tousled taxidermy pinterest, gochujang fanny pack asymmetrical try-hard enamel pin tumblr. Gentrify skateboard chartreuse, try-hard YOLO readymade snackwave poke succulents disrupt blog art
+                party. Iceland readymade XOXO lo-fi. Drinking vinegar tote bag hammock, YOLO truffaut DIY freegan blog deep v post-ironic. Ugh letterpress etsy, hexagon skateboard post-ironic venmo marfa bitters. Before they sold out cornhole health goth
+                leggings vexillologist tbh etsy, retro fixie chia sriracha asymmetrical.</p>
+            </div>
+            <div class="lorem__links">
+              <span class="lorem__links--comments"><span class="fa fa-fw fa-comment-o fa-2x"></span>Read Comments</span>
+              <span class="lorem__links--later"><span class="fa fa-fw fa-cloud-download fa-2x"></span>Read Later</span>
+              <span class="lorem__links--share"><span class="fa fa-fw fa-share-square fa-2x"></span>Share This Post</span>
+            </div>
+          </div>
         </div>
-    </div>
-  </div>
 
-  <div class="grid__right">
-   <div class="social">
-     <img src="/images/surfpic.jpeg" class="social__pic">
-      <div class="social__name">Anne Marie</div>
-        <div class="social__links">
-          <span class="link">Twitter</span>
-          <span class="link">Facebook</span>
-          <span class="link"> Instagram</span>
+        <div class="grid__right">
+          <div class="social">
+            <img src="/images/surfpic.jpeg" class="social__pic">
+            <div class="social__name">Anne Marie</div>
+            <div class="social__links">
+              <span class="link">Twitter</span>
+              <span class="link">Facebook</span>
+              <span class="link"> Instagram</span>
+            </div>
+          </div>
+
+
+          <div class="ad">
+            <img src="/images/surftravel.jpeg" alt="" class="ad__picture">
+            <div class="ad__link">About This Ad</div>
+          </div>
+
+
+
+          <div class="sidebar">
+            <div class="sidebar__heading">Sidebar Section Heading</div>
+            <div class="sidebar__lorem">
+              <p>Farm-to-table retro vinyl, kickstarter jianbing microdosing shabby chic tbh DIY kinfolk. Food truck meh squid austin waistcoat crucifix. Hoodie semiotics street art, church-key ramps lomo fanny pack kogi gastropub 90's whatever you probably
+                haven't heard of them health goth hot chicken. Typewriter pickled offal, blue bottle vinyl +1 gluten-free truffaut.</p>
+            </div>
+          </div>
+
         </div>
-   </div>
+      </div>
+      <!--end of grid-->
 
-   <div class="ad">
-     <img src="/images/surftravel.jpeg" alt="" class="ad__picture">
-     <div class="ad__link">About This Ad</div>
-   </div>
+      <div class="bottom">
+       <div class="bottom__header">Most Popular Posts</div>
+        <div class="bottom__grid">
+          <img src="/images/dogsurf1.jpg" alt="" class="bottom__pic">
+          <img src="/images/dogsurf2.jpg" alt="" class="bottom__pic">
+          <img src="/images/dogsurf3.jpg" alt="" class="bottom__pic">
+          <img src="/images/dogsurf4.jpg" alt="" class="bottom__pic">
+        </div>
 
 
 
-<div class="sidebar">
-  <div class="sidebar__heading">Sidebar Section Heading</div>
-   <div class="sidebar__lorem">
-     <p>Farm-to-table retro vinyl, kickstarter jianbing microdosing shabby chic tbh DIY kinfolk. Food truck meh squid austin waistcoat crucifix. Hoodie semiotics street art, church-key ramps lomo fanny pack kogi gastropub 90's whatever you probably haven't heard of them health goth hot chicken. Typewriter pickled offal, blue bottle vinyl +1 gluten-free truffaut.</p>
-   </div>
+
+
+      </div>
+      <!--end of bottom-->
+
+
     </div>
-
+    <!--end of section-->
   </div>
-</div> <!--end of grid-->
-</div> <!--end of section-->
-</div> <!--end of container-->
-
-
+  <!--end of container-->
 
 
 
@@ -101,4 +133,5 @@
 
   <script src="/app.js" charset="utf-8"></script>
 </body>
+
 </html>
