styling bottom part

--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
 
 
           <div class="ad">
-            <img src="/images/surftravel.jpeg" alt="" class="ad__picture">
+            <img src="/images/surftravel.jpeg" alt="" class="ad__pic">
             <div class="ad__link">About This Ad</div>
           </div>
 
@@ -91,8 +91,7 @@
           <div class="sidebar">
             <div class="sidebar__heading">Sidebar Section Heading</div>
             <div class="sidebar__lorem">
-              <p>Farm-to-table retro vinyl, kickstarter jianbing microdosing shabby chic tbh DIY kinfolk. Food truck meh squid austin waistcoat crucifix. Hoodie semiotics street art, church-key ramps lomo fanny pack kogi gastropub 90's whatever you probably
-                haven't heard of them health goth hot chicken. Typewriter pickled offal, blue bottle vinyl +1 gluten-free truffaut.</p>
+              <p>Farm-to-table retro vinyl, kickstarter jianbing microdosing shabby chic tbh DIY kinfolk. Food truck meh squid austin waistcoat hoodie.</p>
             </div>
           </div>
 
@@ -103,10 +102,10 @@
       <div class="bottom">
        <div class="bottom__header">Most Popular Posts</div>
         <div class="bottom__grid">
-          <img src="/images/dogsurf1.jpg" alt="" class="bottom__pic">
-          <img src="/images/dogsurf2.jpg" alt="" class="bottom__pic">
-          <img src="/images/dogsurf3.jpg" alt="" class="bottom__pic">
-          <img src="/images/dogsurf4.jpg" alt="" class="bottom__pic">
+          <img src="/images/bottom1.jpg" alt="" class="bottom__pic">
+          <img src="/images/bottom2.jpg" alt="" class="bottom__pic">
+          <img src="/images/bottom3.jpg" alt="" class="bottom__pic">
+          <img src="/images/bottom4.jpg" alt="" class="bottom__pic">
         </div>
 
 
