--- a/public/index.html
+++ b/public/index.html
@@ -102,18 +102,21 @@
       <div class="bottom">
        <div class="bottom__header">Most Popular Posts</div>
         <div class="bottom__grid">
-          <img src="/images/bottom1.jpg" alt="" class="bottom__pic">
+          <div class="bottom__square"><img src="/images/bottom1.jpg" alt="" class="bottom__pic"></div>
           <img src="/images/bottom2.jpg" alt="" class="bottom__pic">
           <img src="/images/bottom3.jpg" alt="" class="bottom__pic">
           <img src="/images/bottom4.jpg" alt="" class="bottom__pic">
         </div>
 
-
-
-
-
+      <div class="bottom__footer">
+        <div class="bottom__footer--copyright">The Ironyard Copyright 2013, All Rights Reserved</div>
+        <div class="bottom__footer--nav">Nav Item 1 | Nav Item 2 | Nav Item 3 | Nav Item 5</div>
       </div>
-      <!--end of bottom-->
+
+
+
+
+      </div> <!--end of bottom-->
 
 
     </div>
