--- a/public/index.html
+++ b/public/index.html
@@ -102,10 +102,10 @@
       <div class="bottom">
        <div class="bottom__header">Most Popular Posts</div>
         <div class="bottom__grid">
-          <div class="bottom__square"><img src="/images/bottom1.jpg" alt="" class="bottom__pic"></div>
-          <img src="/images/bottom2.jpg" alt="" class="bottom__pic">
-          <img src="/images/bottom3.jpg" alt="" class="bottom__pic">
-          <img src="/images/bottom4.jpg" alt="" class="bottom__pic">
+          <div class="bottom__square"><img src="/images/bottom1.jpg" alt="" class="bottom__pic"><p class="bottom__writing">A Cool Post</p></div>
+          <div class="bottom__square"><img src="/images/bottom2.jpg" alt="" class="bottom__pic"><p class="bottom__writing">A Cool Post</p></div>
+          <div class="bottom__square"><img src="/images/bottom3.jpg" alt="" class="bottom__pic"><p class="bottom__writing">A Cool Post</p></div>
+          <div class="bottom__square"><img src="/images/bottom4.jpg" alt="" class="bottom__pic"><p class="bottom__writing">A Cool Post</p></div>
         </div>
 
       <div class="bottom__footer">
