--- a/public/index.html
+++ b/public/index.html
@@ -102,11 +102,24 @@
       <div class="bottom">
        <div class="bottom__header">Most Popular Posts</div>
         <div class="bottom__grid">
-          <div class="bottom__square"><img src="/images/bottom1.jpg" alt="" class="bottom__pic"><p class="bottom__writing">A Cool Post</p></div>
-          <div class="bottom__square"><img src="/images/bottom2.jpg" alt="" class="bottom__pic"><p class="bottom__writing">A Cool Post</p></div>
-          <div class="bottom__square"><img src="/images/bottom3.jpg" alt="" class="bottom__pic"><p class="bottom__writing">A Cool Post</p></div>
-          <div class="bottom__square"><img src="/images/bottom4.jpg" alt="" class="bottom__pic"><p class="bottom__writing">A Cool Post</p></div>
-        </div>
+          <div class="bottom__square">
+            <img src="/images/bottom1.jpg" alt="" class="bottom__pic">
+            <p class="bottom__writing">A Cool Post</p>
+          </div>
+          <div class="bottom__square">
+            <img src="/images/bottom2.jpg" alt="" class="bottom__pic">
+            <p class="bottom__writing">A Cool Post</p>
+          </div>
+          <div class="bottom__square">
+            <img src="/images/bottom3.jpg" alt="" class="bottom__pic">
+            <p class="bottom__writing">A Cool Post</p>
+          </div>
+          <div class="bottom__square">
+            <img src="/images/bottom4.jpg" alt="" class="bottom__pic">
+            <p class="bottom__writing">A Cool Post</p>
+          </div>
+
+</div> <!--end of grid-->
 
       <div class="bottom__footer">
         <div class="bottom__footer--copyright">The Ironyard Copyright 2013, All Rights Reserved</div>
