--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="title">
-      <div class="title__top">Surf and Paddle Co.</div>
+      <div class="title__top">Surf &amp; Paddle Co.</div>
       <div class="title__bottom">An Ironyard Academy Project Est Fall 2013</div>
     </div>
 
@@ -102,22 +102,22 @@
       <div class="bottom">
        <div class="bottom__header">Most Popular Posts</div>
         <div class="bottom__grid">
-          <div class="bottom__square">
+          <span class="bottom__square">
             <img src="/images/bottom1.jpg" alt="" class="bottom__pic">
             <p class="bottom__writing">A Cool Post</p>
-          </div>
-          <div class="bottom__square">
+          </span>
+          <span class="bottom__square">
             <img src="/images/bottom2.jpg" alt="" class="bottom__pic">
             <p class="bottom__writing">A Cool Post</p>
-          </div>
-          <div class="bottom__square">
+          </span>
+          <span class="bottom__square">
             <img src="/images/bottom3.jpg" alt="" class="bottom__pic">
             <p class="bottom__writing">A Cool Post</p>
-          </div>
-          <div class="bottom__square">
+          </span>
+          <span class="bottom__square">
             <img src="/images/bottom4.jpg" alt="" class="bottom__pic">
             <p class="bottom__writing">A Cool Post</p>
-          </div>
+          </span>
 
 </div> <!--end of grid-->
 
