--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,8 @@
   </header>
   <!--end of header-->
 
-  <div class="container">
-    <div class="section">
+  <div class="section">
+    <div class="container">
       <div class="grid">
 
         <div class="grid__left">
@@ -98,6 +98,8 @@
         </div>
       </div>
       <!--end of grid-->
+    </div>
+  </div>
 
       <div class="bottom">
        <div class="bottom__header">Most Popular Posts</div>
