--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,6 @@
 
 <body>
   <header class="hero hero-pic">
-    <!--<img src="https://www.surfingindia.net/files/surf-files/u9/India_Surf_Tours_-_17__1_.jpg" class="background">-->
     <div class="navbar">
       <div class="nav__left">
         <div class="logo"><img src="/images/surf-logo-prime-small.jpg" class="logo-pic"><span class="name">Surf and Paddle Co. Blog</span></div>
@@ -45,10 +44,10 @@
               <span class="headline__date">Monday Oct 7th 9:22pm</span>
             </div>
             <div class="lorem">
-              <p>Lomo schlitz poutine church-key fap, butcher hoodie art party PBR&B bitters pickled you probably haven't heard of them everyday carry. Hammock blog biodiesel, seitan godard shoreditch tattooed. Hot chicken bitters DIY, pug echo park tote
+              <p>Lomo schlitz poutine church-key, butcher hoodie art party PBR&B bitters pickled you probably haven't heard of them everyday carry. Hammock blog biodiesel, seitan godard shoreditch tattooed. Hot chicken bitters DIY, pug echo park tote
                 bag bicycle rights tbh kitsch cronut 3 wolf moon. Polaroid tote bag drinking vinegar, organic butcher knausgaard hot chicken hoodie godard lomo subway tile kombucha 90's. Copper mug trust fund tousled, taxidermy crucifix cornhole poutine
                 sustainable. Ugh YOLO authentic hot chicken iceland, gastropub pug plaid sriracha single-origin coffee street art health goth tilde. Church-key man braid banh mi tote bag, post-ironic cardigan neutra.</p>
-              <p>Prism pork belly ramps subway tile brooklyn. Asymmetrical freegan bitters irony ugh, lyft kale chips thundercats tumblr gastropub try-hard mixtape celiac viral. Fap direct trade knausgaard gochujang semiotics, godard polaroid venmo four
+              <p>Prism pork belly ramps <a href="#" class="lorem__innerlink">subway tile</a> brooklyn. Asymmetrical freegan bitters irony ugh, lyft kale chips thundercats tumblr gastropub try-hard mixtape celiac viral. Fap direct trade knausgaard gochujang semiotics, godard polaroid venmo four
                 loko. Chicharrones swag synth street art. Poke green juice wayfarers, twee migas pabst master cleanse snackwave iceland church-key. Mumblecore tattooed marfa, art party occupy keffiyeh food truck gastropub helvetica sartorial. Direct trade
                 pop-up craft beer you probably haven't heard of them.</p>
               <div class="lorem__indent">
@@ -56,7 +55,7 @@
               </div>
               <p>Try-hard hoodie fam cardigan coloring book, sartorial franzen schlitz migas yr readymade drinking vinegar. Lumbersexual woke godard, succulents four loko farm-to-table mlkshk butcher knausgaard tofu. Before they sold out typewriter helvetica,
                 glossier organic etsy aesthetic pug locavore gentrify plaid la croix fashion axe brooklyn. Authentic gluten-free distillery art party pour-over jean shorts. Kale chips pop-up meggings shoreditch before they sold out. Gentrify 8-bit retro
-                bitters cred, fashion axe paleo sartorial pok pok air plant actually banjo. Banh mi whatever man bun, tattooed flannel fam banjo aesthetic quinoa migas hexagon.</p>
+                bitters cred, fashion axe paleo sartorial pok pok air plant <a href="#" class="lorem__innerlink">actually banjo</a>. Banh mi whatever man bun, tattooed flannel fam banjo aesthetic quinoa migas hexagon.</p>
               <p>Etsy vaporware bushwick shoreditch. Humblebrag tousled taxidermy pinterest, gochujang fanny pack asymmetrical try-hard enamel pin tumblr. Gentrify skateboard chartreuse, try-hard YOLO readymade snackwave poke succulents disrupt blog art
                 party. Iceland readymade XOXO lo-fi. Drinking vinegar tote bag hammock, YOLO truffaut DIY freegan blog deep v post-ironic. Ugh letterpress etsy, hexagon skateboard post-ironic venmo marfa bitters. Before they sold out cornhole health goth
                 leggings vexillologist tbh etsy, retro fixie chia sriracha asymmetrical.</p>
@@ -124,7 +123,7 @@
 </div> <!--end of grid-->
 
       <div class="bottom__footer">
-        <div class="bottom__footer--copyright">The Ironyard Copyright 2013, All Rights Reserved</div>
+        <span class="bottom__footer--copyright"><img src="/images/surf-logo-prime-small.jpg" class="logo-pic">The Ironyard Copyright 2013, All Rights Reserved</span>
         <div class="bottom__footer--nav">Nav Item 1 | Nav Item 2 | Nav Item 3 | Nav Item 5</div>
       </div>
 
