--- a/public/index.html
+++ b/public/index.html
@@ -105,29 +105,27 @@
         <div class="bottom__grid">
           <span class="bottom__square">
             <img src="/images/bottom1.jpg" alt="" class="bottom__pic">
-            <p class="bottom__writing">A Cool Post</p>
+            <p class="bottom__writing">Post #1</p>
           </span>
           <span class="bottom__square">
             <img src="/images/bottom2.jpg" alt="" class="bottom__pic">
-            <p class="bottom__writing">A Cool Post</p>
+            <p class="bottom__writing">Post #2</p>
           </span>
           <span class="bottom__square">
             <img src="/images/bottom3.jpg" alt="" class="bottom__pic">
-            <p class="bottom__writing">A Cool Post</p>
+            <p class="bottom__writing">Post #3</p>
           </span>
           <span class="bottom__square">
             <img src="/images/bottom4.jpg" alt="" class="bottom__pic">
-            <p class="bottom__writing">A Cool Post</p>
+            <p class="bottom__writing">Post #4</p>
           </span>
 
 </div> <!--end of grid-->
 
       <div class="bottom__footer">
-        <span class="bottom__footer--copyright"><img src="/images/surf-logo-prime-small.jpg" class="logo-pic">The Ironyard Copyright 2013, All Rights Reserved</span>
+        <div class="bottom__footer--copyright"><img src="/images/surf-logo-prime-small.jpg" class="logo-pic"><span class="bottom__name">The Ironyard Copyright 2013, All Rights Reserved</span></div>
         <div class="bottom__footer--nav">Nav Item 1 | Nav Item 2 | Nav Item 3 | Nav Item 5</div>
       </div>
-
-
 
 
       </div> <!--end of bottom-->
