--- a/public/index.html
+++ b/public/index.html
@@ -61,9 +61,9 @@
                 leggings vexillologist tbh etsy, retro fixie chia sriracha asymmetrical.</p>
             </div>
             <div class="lorem__links">
-              <span class="lorem__links--comments"><span class="fa fa-fw fa-comment-o fa-2x"></span>Read Comments</span>
-              <span class="lorem__links--later"><span class="fa fa-fw fa-cloud-download fa-2x"></span>Read Later</span>
-              <span class="lorem__links--share"><span class="fa fa-fw fa-share-square fa-2x"></span>Share This Post</span>
+              <span class="lorem__links--comments"><span class="fa fa-fw fa-comment-o"></span>Read Comments</span>
+              <span class="lorem__links--later"><span class="fa fa-fw fa-cloud-download"></span>Read Later</span>
+              <span class="lorem__links--share"><span class="fa fa-fw fa-share-square"></span>Share This Post</span>
             </div>
           </div>
         </div>
