--- a/public/index.html
+++ b/public/index.html
@@ -61,9 +61,18 @@
                 leggings vexillologist tbh etsy, retro fixie chia sriracha asymmetrical.</p>
             </div>
             <div class="lorem__links">
-              <span class="lorem__links--comments"><span class="fa fa-fw fa-comment-o"></span>Read Comments</span>
-              <span class="lorem__links--later"><span class="fa fa-fw fa-cloud-download"></span>Read Later</span>
-              <span class="lorem__links--share"><span class="fa fa-fw fa-share-square"></span>Share This Post</span>
+              <button class="lorem__boxes">
+                <span class="lorem__box--icon fa fa-fw fa-comment-o"></span>
+                <span class="lorem__links--gray">Read Comments</span>
+              </button>
+              <button class="lorem__boxes">
+                <span class="lorem__box--icon fa fa-fw fa-cloud-download"></span>
+                <span class="lorem__links--gray">Read Later</span>
+              </button>
+              <button class="lorem__boxes2">
+                <span class="lorem__box--icon2 fa fa-fw fa-share-square"></span>
+                <span class="lorem__links--share">Share This Post</span>
+              </button>
             </div>
           </div>
         </div>
@@ -113,7 +122,7 @@
           </span>
           <span class="bottom__square">
             <img src="/images/bottom3.jpg" alt="" class="bottom__pic">
-            <p class="bottom__writing">Post #3</p>
+            <p class="bottom__writing">This is post #3</p>
           </span>
           <span class="bottom__square">
             <img src="/images/bottom4.jpg" alt="" class="bottom__pic">
