fixed footer stuff

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header class="hero hero-pic">
-    <div class="navbar">
+    <div class="navbar container">
       <div class="nav__left">
         <div class="logo"><img src="/images/surf-logo-prime-small.jpg" class="logo-pic"><span class="name">Surf and Paddle Co. Blog</span></div>
       </div>
@@ -132,8 +132,10 @@
 </div> <!--end of grid-->
 
       <div class="bottom__footer">
-        <div class="bottom__footer--copyright"><img src="/images/surf-logo-prime-small.jpg" class="logo-pic"><span class="bottom__name">The Ironyard Copyright 2013, All Rights Reserved</span></div>
-        <div class="bottom__footer--nav">Nav Item 1 | Nav Item 2 | Nav Item 3 | Nav Item 5</div>
+        <div class="bottom__footer--words container">
+          <span class="bottom__footer--name"><img src="/images/surf-logo-prime-small.jpg" class="logo-pic">The Ironyard Copyright 2013, All Rights Reserved</span>
+          <div class="bottom__footer--nav">Nav Item 1 | Nav Item 2 | Nav Item 3 | Nav Item 5</div>
+        </div>
       </div>
 
 
